--- a/package.json
+++ b/package.json
@@ -9,17 +9,56 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
+    "@apollo/client": "^3.7.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@sanity/client": "^4.0.1",
+    "@sanity/image-url": "^1.0.1",
+    "deepmerge": "^4.2.2",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "expo": "~47.0.9",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.1.3",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-root-siblings": "^4.1.1",
+    "react-native-root-toast": "^3.3.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-shadow-2": "^7.0.6",
+    "react-native-simple-toast": "^2.0.0",
+    "react-native-slick": "^1.6.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-super-grid": "^5.0.0",
+    "react-native-svg": "13.4.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-toast-notifications": "^3.3.1",
+    "react-native-web": "~0.18.9",
+    "react-native-wind": "^1.2.0",
+    "react-redux": "^8.0.5",
+    "toastify-react-native": "^3.1.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.7",
+    "@graphql-codegen/typescript-operations": "2.3.4",
+    "@graphql-codegen/typescript-react-apollo": "3.2.10",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "typescript": "^4.6.3"
   },
   "private": true
