--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.1.3",
+    "react-native-reanimated": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-root-siblings": "^4.1.1",
     "react-native-root-toast": "^3.3.1",
