--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "deepmerge": "^4.2.2",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.9",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
