--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.9",
@@ -60,6 +61,7 @@
     "@graphql-codegen/typescript": "2.4.7",
     "@graphql-codegen/typescript-operations": "2.3.4",
     "@graphql-codegen/typescript-react-apollo": "3.2.10",
+    "@types/metro-config": "^0.66.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@types/react-native-snap-carousel": "^3.8.5",
